@@ -2,7 +2,7 @@
 /*
  readline.h : Code dealing with the GNU readline library.
 
- (c) 2008-2013 Michele Martone
+ (c) 2008-2015 Michele Martone
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -33,7 +33,7 @@ namespace fim
 
 namespace rl
 {
-	void initialize_readline (void);
+	void initialize_readline (fim_bool_t with_no_display_device, fim_bool_t wcs);
 	int fim_search_rl_startup_hook(void);
 }
 
